@@ -636,7 +636,7 @@ Memory allocation (code space): 14
 Memory allocation (code space): 14
 ------------------------------------------------------------------
   0   4 Bra
-  2     [^\x{aa}]
+  2     [^\xaa]
   4   4 Ket
   6     End
 ------------------------------------------------------------------
