@@ -606,7 +606,7 @@ Need char = \x{bf}
 /[^\xff]/8DZ
 ------------------------------------------------------------------
         Bra
-        [\x00-\xfe] (neg)
+        [^\x{ff}]
         Ket
         End
 ------------------------------------------------------------------
@@ -868,7 +868,7 @@ Starting byte set: \xe1
 /[^\x{c4}]/8DZ
 ------------------------------------------------------------------
         Bra
-        [\x00-\xc3\xc5-\xff] (neg)
+        [^\x{c4}]
         Ket
         End
 ------------------------------------------------------------------
