@@ -81,7 +81,7 @@ Starting byte set: \xd0 \xd1
 /[^ⱥ]/8iBZ
 ------------------------------------------------------------------
         Bra
-        [^\x{2c65}\x{23a}]
+     /i [^\x{2c65}]
         Ket
         End
 ------------------------------------------------------------------
