@@ -448,4 +448,62 @@ Need char = \x{dd00}
     \x{d800}\x{d7ff}\x{dc00}\x{dc00}\x{dcff}\x{dd00}
  0: \x{d800}\x{d7ff}\x{dc00}\x{dc00}\x{dcff}\x{dd00}
 
+/[^\x{80}][^\x{ff}][^\x{100}][^\x{1000}][^\x{ffff}]/BZ
+------------------------------------------------------------------
+        Bra
+        [^\x80]
+        [^\xff]
+        [^\x{100}]
+        [^\x{1000}]
+        [^\x{ffff}]
+        Ket
+        End
+------------------------------------------------------------------
+
+/[^\x{80}][^\x{ff}][^\x{100}][^\x{1000}][^\x{ffff}]/BZi
+------------------------------------------------------------------
+        Bra
+     /i [^\x80]
+     /i [^\xff]
+     /i [^\x{100}]
+     /i [^\x{1000}]
+     /i [^\x{ffff}]
+        Ket
+        End
+------------------------------------------------------------------
+
+/[^\x{100}]*[^\x{1000}]+[^\x{ffff}]??[^\x{8000}]{4,}[^\x{7fff}]{2,9}?[^\x{100}]{5,6}+/BZ
+------------------------------------------------------------------
+        Bra
+        [^\x{100}]*
+        [^\x{1000}]+
+        [^\x{ffff}]??
+        [^\x{8000}]{4}
+        [^\x{8000}]*
+        [^\x{7fff}]{2}
+        [^\x{7fff}]{0,7}?
+        [^\x{100}]{5}
+        [^\x{100}]?+
+        Ket
+        End
+------------------------------------------------------------------
+
+/[^\x{100}]*[^\x{1000}]+[^\x{ffff}]??[^\x{8000}]{4,}[^\x{7fff}]{2,9}?[^\x{100}]{5,6}+/BZi
+------------------------------------------------------------------
+        Bra
+     /i [^\x{100}]*
+     /i [^\x{1000}]+
+     /i [^\x{ffff}]??
+     /i [^\x{8000}]{4}
+     /i [^\x{8000}]*
+     /i [^\x{7fff}]{2}
+     /i [^\x{7fff}]{0,7}?
+        Once
+     /i [^\x{100}]{5}
+     /i [^\x{100}]?
+        Ket
+        Ket
+        End
+------------------------------------------------------------------
+
 /-- End of testinput17 --/
